--- a/source/Packages/TreeViewPresenter.dproj
+++ b/source/Packages/TreeViewPresenter.dproj
@@ -1,13 +1,13 @@
 ﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 		<PropertyGroup>
-			<ProjectGuid>{42AA9CF6-ECBC-4A29-903B-9C21946929EF}</ProjectGuid>
-			<MainSource>DataBindings.dpk</MainSource>
+			<ProjectGuid>{08E12144-254A-40FD-990B-C3845EC6C9EF}</ProjectGuid>
+			<MainSource>TreeViewPresenter.dpk</MainSource>
 			<ProjectVersion>12.2</ProjectVersion>
 			<Base>True</Base>
 			<Config Condition="'$(Config)'==''">Debug</Config>
 			<Platform>Win32</Platform>
 			<AppType>Package</AppType>
-			<FrameworkType>VCL</FrameworkType>
+			<FrameworkType>None</FrameworkType>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
@@ -24,7 +24,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_Description>Data binding runtime package</DCC_Description>
+			<DCC_Description>Treeview presenter runtime package</DCC_Description>
 			<DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
 			<RuntimeOnlyPackage>true</RuntimeOnlyPackage>
 			<GenPackage>true</GenPackage>
@@ -47,24 +47,13 @@
 			<DCC_DebugInformation>false</DCC_DebugInformation>
 		</PropertyGroup>
 		<ItemGroup>
-			<DelphiCompile Include="DataBindings.dpk">
+			<DelphiCompile Include="TreeViewPresenter.dpk">
 				<MainSource>MainSource</MainSource>
 			</DelphiCompile>
-			<DCCReference Include="rtl.dcp"/>
-			<DCCReference Include="vcl.dcp"/>
-			<DCCReference Include="..\Library\System\System.Bindings.pas"/>
-			<DCCReference Include="..\Library\System\System.Collections.pas"/>
-			<DCCReference Include="..\Library\System\System.Data.Conversion.Default.pas"/>
-			<DCCReference Include="..\Library\System\System.Data.Conversion.pas"/>
-			<DCCReference Include="..\Library\System\System.NotificationHandler.pas"/>
-			<DCCReference Include="..\Library\System\System.Validations.pas"/>
-			<DCCReference Include="..\Library\System\System.Bindings.Collections.pas"/>
-			<DCCReference Include="..\Library\System\System.Data.Templates.pas"/>
-			<DCCReference Include="..\Library\System\System.Events.pas"/>
-			<DCCReference Include="..\Library\System\System.PropertyPath.pas"/>
-			<DCCReference Include="..\Library\System\System.Bindings.Controls.VCL.Extensions.pas"/>
-			<DCCReference Include="..\Library\System\System.Bindings.Controls.VCL.pas"/>
-			<DCCReference Include="..\Library\System\System.Data.Templates.Default.pas"/>
+			<DCCReference Include="DataBindings.dcp"/>
+			<DCCReference Include="VirtualTreesR.dcp"/>
+			<DCCReference Include="..\Library\System\Windows\System.Windows.ColumnDefinitions.pas"/>
+			<DCCReference Include="..\Library\System\Windows\System.Windows.TreeViewPresenter.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
@@ -117,7 +106,7 @@
 						<Excluded_Packages Name="$(BDSBIN)\dclofficexp150.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
 					</Excluded_Packages>
 					<Source>
-						<Source Name="MainSource">DataBindings.dpk</Source>
+						<Source Name="MainSource">TreeViewPresenter.dpk</Source>
 					</Source>
 				</Delphi.Personality>
 				<Platforms>
