--- a/Packages/DelphiXE/DataBindings.dproj
+++ b/Packages/DelphiXE/DataBindings.dproj
@@ -57,6 +57,7 @@
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.Collections.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.pas"/>
 			<DCCReference Include="..\..\Source\Bindings\DSharp.Bindings.VCLControls.Extensions.pas"/>
+			<DCCReference Include="..\..\Source\Collections\DSharp.Collections.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Collections.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.Default.pas"/>
